mudancas feitas no video

--- a/tp1/flaskblog/templates/about.html
+++ b/tp1/flaskblog/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
 {% block content%}
-    <h1>About page</h1>  
+    <h1>About QuickDash</h1> 
+    <p>
+        This project goal is to provide a easy data visualization to the user 
+    </p>
 {% endblock content%}
