--- a/tp1/flaskblog/templates/data_visualization.html
+++ b/tp1/flaskblog/templates/data_visualization.html
@@ -2,6 +2,7 @@
 {% block content%}
     <div class="container">
         <form method="POST" action="" enctype="multipart/form-data">
+            {{ form.hidden_tag() }}
             <fieldset class='form-group'>
                 <legend class="border-bottom mb-4">Please read carrefully</legend>
                 <div class="form-group">
