--- a/tp1/flaskblog/templates/graphs.html
+++ b/tp1/flaskblog/templates/graphs.html
@@ -1,36 +1,48 @@
 {% extends "layout_header.html" %}
 {% block content%}
-<div class="container">
-    <canvas id="myChart" width="600" height="400"></canvas>
-</div>
-<script>        
-    var ctx = document.getElementById('myChart');
-    var myChart = new Chart(ctx, {
-        type: {{graph_info.graph_type}},
-        data: {
-            labels: [{% for item in graph_info.x_values %}
-                        item
-                     {% endfor %}
-            ]
-            datasets: [{
-                label: {{y_column_name}},
-                data: [{% for item in graph_info.x_values %}
-                        item
-                     {% endfor %}
-            ],
-                borderWidth: 1
-            }]
-        },
-        options: {
-            scales: {
-                yAxes: [{
-                    ticks: {
-                        beginAtZero: true
-                    }
+
+    <div class="container">
+        <canvas id="myChart" width="600" height="400"></canvas>
+    </div>
+
+    <script>        
+        var ctx = document.getElementById('myChart');
+        var myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
+                datasets: [{
+                    label: '# of Votes',
+                    data: [12, 19, 3, 5, 2, 3],
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
                 }]
+            },
+            options: {
+                scales: {
+                    yAxes: [{
+                        ticks: {
+                            beginAtZero: true
+                        }
+                    }]
+                }
             }
-        }
-    });
-</script>
+        });
+    </script>
 
 {% endblock content%}
