--- a/tp1/flaskblog/templates/layout_header.html
+++ b/tp1/flaskblog/templates/layout_header.html
@@ -10,16 +10,16 @@
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='main.css')}}">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     {% if title %}
-        <title>Flask Blog - {{title}}</title>
+        <title>QuickDash- {{title}}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>QuickDash</title>
     {% endif %}
 </head>
 <body>
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="/">Flask Blog</a>
+            <a class="navbar-brand mr-4" href="/">QuickDash</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
